<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grade Sheets (Ad Supported)</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a message</string>
    <string name="default_score">0%</string>
    <string name="title_activity_display_message">My message</string>
    <string name="gradesheet_history_header">Recent Grade Sheets</string>
    <string name="create_gradesheet_label">Create</string>
    <string name="title_activity_scrolling_numbers_static_cards">ScrollingNumbersStaticCards</string>
    <string name="title_gradesheet_list">Grade Sheets</string>
    <string name="title_gradesheet_detail">Grade Sheet Detail</string>
    
    
    <string name="menu_settings">Settings</string>
    
    <string name="pref_detailTypeTitle">Detail View Type</string>
    <string name="pref_detailTypeDialogTitle">Select Detail View</string>
    <string name="pref_detailType_default">custom1</string>
    <string name="pref_detailType_id">detailType</string>
    
    
    <string name="pref_numberRightOrWrong_id">numberRightOrWrong</string>
    <string name="pref_displayNumberWrong_summary">Choose this setting if you want to have the numbers be the number answered incorrectly instead of the number answerd correctly.</string>
    <string name="pref_displayNumberWrong_title">Inverted Points</string>    

    
    <string name="pref_fontSize_id">fontSizeId</string>
    <string name="pref_fontSizeTitle">Font Size</string>
    <string name="pref_fontSizeDialogTitle">Select Font Size</string>
    <string name="pref_fontSize_default">18</string>

	<string name="pref_displayGradeScale_summary">Select this if you want to highlight the grades that are in a defined range (e.g, 90 to 100 = A)</string>
    <string name="pref_displayGradeScale_title">Enable Grade Scale</string>    

    <string name="pref_degreesOfPrecision_id">degressOfPrecision</string>
    <string name="pref_degreesOfPrecision_title">Number of Decimal Points</string>
    <string name="pref_degreesOfPrecision_dialogTitle">Select Number of Decimal Points</string>
    <string name="pref_degreesOfPrecision_default">0</string>
    
</resources>